--- a/yapper-client/src/styles/ManageConversationsPanel.scss
+++ b/yapper-client/src/styles/ManageConversationsPanel.scss
@@ -48,6 +48,8 @@
 
     #search-results{
         display: flex;
+        padding-right: 0.3rem;
+        // padding-left: 0.5rem;
         flex-direction: column;
         gap: 1rem;
         overflow: scroll;
