--- a/yapper-client/src/styles/ManageFriendsPanel.scss
+++ b/yapper-client/src/styles/ManageFriendsPanel.scss
@@ -5,6 +5,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+    overflow-x:visible;
 
     #empty-friends-list{
         width: 100%;
